--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "repository": "https://github.com/jalal246/thor.git",
   "author": "Jalal MK",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {},
   "devDependencies": {
+    "@swc/core": "^1.2.133",
+    "@swc/jest": "^0.2.17",
+    "@types/jest": "^27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^8.7.0",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.0.0",
     "jest": "^27.4.7",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   }
 }
