--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thor",
+  "name": "thor-event",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/jalal246/thor.git",
@@ -23,5 +23,9 @@
     "jest": "^27.4.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
-  }
+  },
+  "files": [
+    "dist",
+    "LICENSE"
+  ]
 }
