--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "thor-event",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Redux but with events",
+  "main": "dist/index.js",
+  "files": [
+    "dist",
+    "LICENSE"
+  ],
   "repository": "https://github.com/jalal246/thor.git",
   "author": "Jalal MK",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc"
   },
   "dependencies": {},
   "devDependencies": {
@@ -23,9 +29,5 @@
     "jest": "^27.4.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
-  },
-  "files": [
-    "dist",
-    "LICENSE"
-  ]
+  }
 }
